# kero

./: .clang-format  .gitignore  CHANGELOGS.md  CMakeLists.txt  README.md  dev-requirements.txt  example.py  example1.py  example_final.py  example_new.py  example_script.py  performance.txt  pyproject.toml  requirements.txt  requriements.txt  setup.py
docs/: README.md
docs/source/: conf.py  getting_started.md  index.md  installation.md  kero.md
docs/source/_static/: custom.css
docs/source/api/: index.md  kero.arrow.data.rst  kero.arrow.exce.rst  kero.arrow.rst  kero.arrow.samples.rst  kero.engine.codegen.rst  kero.engine.execution.rst  kero.engine.operations.operators.rst  kero.engine.operations.rst  kero.engine.parser.dbast.rst  kero.engine.parser.parser.rst  kero.engine.parser.rst  kero.engine.rst  kero.rst  kero.tensors.rst  modules.rst
engine/include/: register.h
engine/sengine/: io.pyx
examples/: example_script.py  example_script1.py
include/Conversion/: CMakeLists.txt  Passes.h
include/Conversion/DBToTensor/: CMakeLists.txt  DBToTensor.h  DBToTensor.td
include/Dialect/DB/IR/: CMakeLists.txt  DB.td  DBDialect.h  DBOps.h  DBOps.td  DBTypes.h
include/kero-c/: Dialect.h  Registration.h
kero/: CMakeLists.txt  __init__.py  _mlir.py  _operations.py  base_tensor.py  exec.py  queryfilter.py  tensors.py
kero/Query/: catalog.py  exec.py  sql_parser.py
kero/_engine/: ArrowBridge.cpp  CMakeLists.txt  KeroModule.cpp
kero/_engine/_kero/dialects/: KeroBinds.td
kero/_engine/_kero/dialects/db/: __init__.py
kero/arrow/: __init__.py  data.py  exce.py  samples.py  schema_registry.py  type_resolve.py
kero/data/: DataLoader.py  __init__.py  dataloader.py
kero/engine/: __init__.py  _keroEngine.pyi  codegen.py  compiler.py  execution.py  execution_engine.py  executor.py  operation_graph.py  parser.py  queryparser.py
kero/engine/operations/: __init__.py
kero/engine/operations/operators/: Aggregation.py  Logical.py  Mathematical.py  __init__.py  base.py
kero/engine/parser/: __init__.py  dbast.py  parser.py
kero/parser/: ast_nodes.py  exec.py  ir_emitter.py  normalizer.py  schema_binder.py
lib/CAPI/: CMakeLists.txt  Dialect.cpp  Registration.cpp
lib/Conversion/DBToTensor/: CMakeLists.txt  DBToTensor.cpp
lib/Dialect/DB/: CMakeLists.txt  DBDialect.cpp
psycopg_api/: database.py  queryfilter.py
scripts/: build.sh  clean.sh  install.sh  py_build.sh  test.sh  wheel_testing.sh
test/: example-queries.txt  lit.cfg.py
test/lit/Dialect/DB/: db_dialect_lowering.mlir  db_dialect_structure.mlir  db_to_tensor_lowering.mlir  table_structure.mlir
test/py/kero/: test_benchmark.py  test_codegen.py  test_execution.py  test_ir_generation.py  test_parser.py  test_pipeline.py
test/py/kero/arrow/: test_dataset.py
test/py_test/kero/: README.md  test_kero_ir_generation.py  test_kero_ir_lowering.py  test_kero_module_loading.py
test/py_test/parser/: test_demo.py  test_demo_training.py  test_module_loading.py  test_normalizer.py  test_train.py
tools/: CMakeLists.txt
tools/mlir-tools/: CMakeLists.txt  kero-opt.cpp
tools/python/: CMakeLists.txt  KeroModule.cpp
tools/python/conversions/: CMakeLists.txt  sql_to_mlir.cpp
