[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0", "setuptools>=61.0", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kero"
version = "0.1.0"
description = "GPU Accelerated DataBase Query Engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "PyDevC", email = "pydevc@proton.me" }
]

dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "sqlglot",
    "sqlparse",
]

[project.optional-dependencies]
cuda  = ["torch>=2.5.0"]
rocm  = ["torch>=2.5.0"]
torch = ["torch>=2.5.0"]

[tool.scikit-build]
cmake.version = ">=3.20"

cmake.args = [
    "-DMLIR_ENABLE_BINDINGS_PYTHON=ON",
    "-DTHIRDPARTY_LLVM_DIR=${THIRDPARTY_LLVM_DIR}",
    "-DMLIR_DIR=${MLIR_DIR}",
    "-DLLVM_DIR=${LLVM_DIR}"
]

wheel.install-dir = ""
wheel.packages = ["kero"]
